# oop-training-validator

./: Makefile  README.md  pyproject.toml
.github/workflows/: coverage  coverage.yml
validator/: abc.py  dicts.py  lists.py  numbers.py  strings.py  validator.py
validator/schemas/: base.py  dicts.py  lists.py  numbers.py  strings.py
validator/tests/: test_dicts.py  test_lists.py  test_numbers.py  test_strings.py  test_validator.py
