[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["ikonnikovapv <spollyv@gmail.com>"]
readme = "README.md"
packages = [
  { include = "validator" },
]

[tool.poetry.dependencies]
python = "^3.10"
pytest-coverage = "^0.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
